<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/IIMain"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:clickable="true"
    android:elevation="5dp"
    android:focusable="true"
    app:cardBackgroundColor="@color/colorLightGray"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    tools:ignore="MissingClass">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="318dp">


        <TextView
            android:id="@+id/Tv_email"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="290dp"
            android:layout_marginBottom="266dp"
            android:layout_weight="1"
            tools:text="@string/Email" />

        <TextView
            android:id="@+id/set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="62dp"
            android:layout_marginBottom="185dp"
            android:layout_toStartOf="@+id/set_time"
            android:layout_weight="1"
            android:text="@string/the_date" />

        <TextView
            android:id="@+id/set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="183dp"
            android:layout_marginBottom="185dp"
            android:text="@string/the_time" />

        <TextView
            android:id="@+id/set_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="314dp"
            android:layout_marginBottom="114dp"
            android:text="@string/the_note" />

        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="111dp"
            android:layout_marginBottom="26dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="28dp"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/todo" />

        <CheckBox
            android:id="@+id/is_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="51dp"
            android:text="@string/this_evet_is_set_to_happen_every_two_weeks" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>
